--- a/services.yaml
+++ b/services.yaml
@@ -32,7 +32,7 @@ spec:
   ports:
     - name: http
       port: 8161
-      nodePort: 30010
+      #nodePort: 30010
 
     - name: endpoint
       port: 61616
@@ -74,6 +74,6 @@ spec:
   ports:
     - name: http
       port: 8080
-      nodePort: 30020
+      #nodePort: 30020
 
   type: ClusterIP
